# lean-qverify

./: .gitignore  FUTURE_WORK.md  LeanQVerify.lean  README.md  SPEC.md  lake-manifest.json  lakefile.lean  pyproject.toml
LeanQVerify/: Main.lean
LeanQVerify/Circuit/: Gate.lean  Identities.lean  QCircuit.lean
LeanQVerify/Foundation/: DensityMatrix.lean  QState.lean  Unitary.lean
LeanQVerify/QASM/: Elaborator.lean  Parser.lean
LeanQVerify/Spec/: CircuitSpec.lean  Satisfies.lean  StandardSpecs.lean
examples/: bell_state.py  grover_verify.py  teleportation.py
lean_qverify/: __init__.py  bridge.py  counterexample.py  gpu.py  result.py  runner.py  simulator.py
tests/circuits/: bell.qasm  ghz.qasm  grover.qasm  hea4.qasm  teleport.qasm  teleportation.qasm
tests/lean/: TestCircuit.lean  TestElaborator.lean  TestParser.lean  TestQState.lean
tests/python/: conftest.py  test_bridge.py  test_gpu.py
theorems/: BellState.lean  GHZTeleportation.lean  GateAlgebra.lean  Grover.lean  HEA.lean  README.md  lakefile.lean
